Use loaded color colorSpace for QColor transformations

toQColor uses current Color colorSpace to convert which avoids the color
discrepancy after hitting ok on nativeDialog in macOS.

BUG:407880